add archive case service

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
 
+    implementation "no.fint:fint-arkiv-resource-model-java:3.11.0"
+
     implementation 'javax.validation:validation-api'
     implementation 'org.hibernate.validator:hibernate-validator'
 
