--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 plugins {
-    id 'org.springframework.boot' version '3.5.6' apply false
+    id 'org.springframework.boot' version '3.5.7' apply false
     id 'io.spring.dependency-management' version '1.1.7'
     id 'java'
     id 'maven-publish'
     id 'java-library'
-    id 'com.github.ben-manes.versions' version '0.52.0'
+    id 'com.github.ben-manes.versions' version '0.53.0'
 }
 
 group = 'no.fintlabs'
@@ -44,7 +44,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-    implementation 'no.fintlabs:fint-flyt-resource-server:5.0.0'
+    implementation 'no.fintlabs:fint-flyt-resource-server:6.0.0-rc-12'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
@@ -57,12 +57,11 @@ dependencies {
     implementation 'org.hibernate.validator:hibernate-validator'
 
     implementation 'org.springframework.kafka:spring-kafka'
-    implementation 'no.fintlabs:fint-kafka:5.0.0-rc-12'
+    implementation 'no.fintlabs:fint-kafka:5.0.0-rc-15'
     implementation 'no.fintlabs:fint-flyt-kafka:4.0.0-rc-2'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'cglib:cglib-nodep:3.3.0'
-    testImplementation 'io.projectreactor:reactor-test'
+     testImplementation 'io.projectreactor:reactor-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
